package com.cpz.processing.controls.common.theme;

public final class ThemeTokens {

    public int surface;
    public int surfaceVariant;

    public int onSurface;
    public int onSurfaceVariant;

    public int primary;
    public int onPrimary;

    public int border;

    public int hoverOverlay;
    public int pressedOverlay;

    public int disabledAlpha;

    public int cursor;
    public int selection;
}
