@startuml
title Core Infrastructure
skinparam packageStyle rectangle
skinparam shadowing false

package "External Boundary" {
  class ExternalSource
  class ExternalAdapter
  class ProcessingKeyboardAdapter
}

package "Input" {
  class PointerEvent
  class KeyboardEvent
  class KeyboardState
  class InputManager
  interface InputLayer
  class DefaultInputLayer
  class "...InputLayer" as ControlInputLayer
  class "...InputAdapter" as ControlInputAdapter
  interface PointerInputTarget
  interface KeyboardInputTarget
  class FocusManager
}

package "Theme" {
  class Sketch
  interface ThemeProvider
  class ThemeManager
  class ThemeSnapshot
  class ThemeTokens
  class LightTheme
  class DarkTheme
}

package "Overlay" {
  class OverlayManager
  class OverlayEntry
}

ExternalSource --> ExternalAdapter : raw callbacks or state
ExternalAdapter --> PointerEvent : creates
ExternalAdapter --> KeyboardEvent : creates
ExternalAdapter --> KeyboardState : updates
ProcessingKeyboardAdapter --> KeyboardState : reads modifier state
ProcessingKeyboardAdapter --> InputManager : dispatches KeyboardEvent

InputManager --> InputLayer : ordered dispatch
DefaultInputLayer ..|> InputLayer
ControlInputLayer ..|> InputLayer
ControlInputLayer --> ControlInputAdapter : forwards through facade/layer
ControlInputAdapter --> PointerInputTarget : pointer behavior
ControlInputAdapter --> KeyboardInputTarget : keyboard behavior
FocusManager --> KeyboardInputTarget : focus ownership

Sketch --> ThemeManager : owns
ThemeManager ..|> ThemeProvider
ThemeManager --> ThemeSnapshot : cached snapshot
ThemeSnapshot --> ThemeTokens
LightTheme --> ThemeTokens
DarkTheme --> ThemeTokens

OverlayManager --> OverlayEntry : orders overlays
@enduml
